force-app/main/default/objects/Daily_status__c/Daily_status__c.object-meta.xml
<CustomObject>
    <label>Daily status</label>
    <nameField>
        <displayFormat>DS-{0000}</displayFormat>
        <label>Daily status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>