force-app/main/default/objects/Daily_status__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Daily status</relationshipLabel>
    <relationshipName>Daily_status</relationshipName>
    <type>Lookup</type>
</CustomField>