force-app/main/default/objects/Daily_status__c/fields/Login_time__c.field-meta.xml
<CustomField>
    <fullName>Login_time__c</fullName>
    <label>Login time</label>
    <type>DateTime</type>
</CustomField>