force-app/main/default/objects/Daily_status__c/fields/Logout_time__c.field-meta.xml
<CustomField>
    <fullName>Logout_time__c</fullName>
    <label>Logout time</label>
    <type>DateTime</type>
</CustomField>