force-app/main/default/objects/Daily_status__c/fields/Time_interval__c.field-meta.xml
<CustomField>
    <fullName>Time_interval__c</fullName>
    <formula>( Logout_time__c - Login_time__c )*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time interval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>